--- a/frontend/src/themes/cib/variables.scss
+++ b/frontend/src/themes/cib/variables.scss
@@ -1,9 +1,9 @@
 $primary:       #E11E19;
 $secondary:     #4D6278;
-$success:       #68CBC0;
-$info:          #628EC7;
-$warning:       #F5B677;
-$danger:        #F0716F;
+$success:       #00A5A5;
+$info:          #4E7DBC;
+$warning:       #D98D00;
+$danger:        #E86462;
 $light:         #F0F4F7;
 $dark:          #0F2133;	
 $white:			   #FFF;
